# CiteFIx

./: Dockerfile  LICENSE  README.md  debug_test.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/data/: journal_mappings.json
app/models/: schemas.py
app/routers/: __init__.py  documents.py
app/services/: __init__.py  bibliography_exporter.py  citation_detector.py  citation_formatter.py  completeness_checker.py  docx_parser.py  doi_resolver.py  duplicate_detector.py  journal_normalizer.py  reference_importer.py  retraction_checker.py  validator.py
app/templates/: index.html
citefix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_bibliography_exporter.py  test_citation_detector.py  test_citation_formatter.py  test_completeness_checker.py  test_doi_resolver.py  test_duplicate_detector.py  test_journal_normalizer.py  test_reference_importer.py  test_retraction_checker.py  test_validator.py
