[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citefix"
version = "0.1.0"
description = "Citation formatting, DOI resolution, and validation for Word documents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CiteFix Contributors"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-docx>=1.1.0",
    "habanero>=1.2.0",
    "citeproc-py>=0.6.0",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0",
    "aiofiles>=23.2.0",
    "httpx>=0.26.0",
    "rapidfuzz>=3.5.0",
    "bibtexparser>=1.4.0",
    "rispy>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

[project.scripts]
citefix = "app.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
